--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ html {
 }
 body {
 	background-color: lavender;
-    font-family: Verdana, Geneva, sans-serif
+    font-family: 'Amatic SC', cursive;
 } 
 
 header {
@@ -31,7 +31,8 @@ h1 {font-size: 2.2em;}
 h2 {font-size: 1.5em;}
 h3 {font-size: 1.5em;}
 h1, h2, h3 {
-    font-family: Quicksand, Verdana, Geneva, sans-serif
+    font-family: 'Amatic SC', cursive;
+    font-family: 'Stardos Stencil', cursive;
     ;letter-spacing: 0.1em;
 } 
 
@@ -42,9 +43,10 @@ section {background-color: white;
          font-size: 1.2em;}
 p {
 	color: mediumpurple;
-	font-size: 18px;
+	font-size: 20px;
 	text-align: center;
 }
+
 ul {
 	list-style-type: square;
     color: mediumpurple;
@@ -68,9 +70,9 @@ nav.horizontalNavigation li {
 nav.horizontalNavigation li a {
    display: block;
    color: mediumpurple;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+   text-align: center;
+   padding: 14px 16px;
+   text-decoration: none;
    text-align: center;
 }  
 
@@ -127,3 +129,4 @@ footer a {
 footer a:hover {
   background-color: lavenderblush;
 }
+
