--- a/main.css
+++ b/main.css
@@ -117,6 +117,14 @@ body > footer {
     padding: 10px
 } 
 
+/* Bootstrap slidshow */
+
+.carousel-item img {
+  width: 100%;
+  height: 400px; /* Change this value to set the desired height */
+  object-fit: cover;
+}
+ 
 footer {
   background-color: mediumpurple;
 }
